<resources>
    <string name="app_name">Divina Misericórdia</string>
    <string name="action_settings">Settings</string>
    <string name="menu">Menu</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="principal">Principal</string>
    <string name="a_devocao">A Devoção</string>
    <string name="santa_faustina">Santa Faustina</string>
    <string name="obras_de_misericordia">Obras de Misericórdia</string>
    <string name="terco_da_misericordia">Terço da Misericórdia</string>
    <string name="alerta_do_terco">Notificação do terço</string>
    <string name="novena">Novena</string>
    <string name="mej">MEJ</string>
    <string name="sobre">Sobre</string>
    <string name="titulo_primeiro_dia">Primeiro Dia</string>
    <string name="texto_devocao1">Jesus disse à Santa Faustina:\n<i>\"Sempre que quiseres proporcionar-me alegria,
        fala ao mundo da Minha grande e insondável misericórdia.\"</i>\nEm 1933, Nosso Senhor Jesus Cristo apareceu
        em visão para a Irmã Faustina Kowalska. Pelas palavras de Faustina, entendemos sua visão: <i>\"Vi
        uma grande luz, e nela Deus Pai. Entre esta luz e a Terra vi Jesus pregado na Cruz de tal maneira que
        Deus, querendo olhar para a Terra, tinha que olhar através das chagas de Jesus. E compreendi que,
        somente por causa de Jesus, Deus está abençoando a Terra.\"</i>\nNosso Senhor Jesus Cristo contava à Irmã
        Faustina que as pessoas acreditavam no amor de Deus, porém, tinham muito medo de seus pecados.
        Faltava-lhes confiança de que Deus era misericordioso com seus filhos, e que perdoaria seus pecados
        caso eles estivessem verdadeiramente arrependidos. Diante disso, Nosso Senhor Jesus Cristo apareceu em
        visões diversas vezes para a Irmã Faustina fazendo-lhe pedidos, e Faustina registrava tudo em seu diário
        espiritual. Nosso Senhor Jesus Cristo pediu ainda que se comemorasse a Festa da Divina Misericórdia, e que
        essa Festa seria precedida pela Novena da Misericórdia, que seria iniciada na sexta-feira santa.</string>
    <string name="texto_devocao2"><i>\"Em cada dia da novena, conduzirás ao Meu coração um grupo diferente de almas,
        e as mergulharás no oceano da minha Misericórdia. Eu conduzirei todas as almas à casa do meu Pai&#8230; Por
        minha parte, nada negarei a nenhuma daquelas almas que tu conduzirás à fonte da minha Misericórdia. Cada
        dia pedirás a meu Pai, pela minha amarga Paixão, graças para essas almas.\"</i>\nEm 13 de Setembro de 1935,
        Irmã Faustina escreve: <i>\"Eu vi um anjo, o executor da cólera de Deus&#8230; a ponto de atingir a terra&#8230;
        Eu comecei a implorar  intensamente a Deus  pelo mundo, com palavras que ouvia interiormente. À medida em que
        assim rezava, vi que o anjo ficava desamparado, e não mais podia executar a justa punição&#8230;\"</i>\nNo dia
        seguinte, uma voz interior lhe ensinou uma oração feita nas contas do Rosário: o Terço da Misericórdia.
        Nosso Senhor Jesus Cristo pediu que todos rezassem esse Terço como expiação dos pecados do mundo
        inteiro.\nNosso Senhor Jesus Cristo pediu também que fosse pintada uma imagem de acordo com uma de suas
        aparições. Jesus vestia um manto branco e posicionava Sua mão direita erguida abençoando. Sua mão
        esquerda tocava o manto no local onde fica o Seu Coração, de onde saíam dois raios: um vermelho e um
        branco. Nosso Senhor explicou à Faustina que o raio vermelho significa o seu Sangue, que foi derramado
        por nós, e o raio branco representava a Água que purifica os nossos pecados.</string>
    <string name="texto_devocao3">Karol Wojtyla era um profundo devoto da Divina Misericórdia. Como Cardeal da
        Cracóvia, cidade da Polônia, Karol Wojtyla iniciou em 1965 o Processo Informativo da vida de Irmã
        Faustina. Em 1967 a ação chegou em Roma, inaugurando o processo de Beatificação de Faustina. Em
        dezembro de 1992, um milagre por intercessão da Irmã Faustina foi aceito, fazendo com que ela se torne
        Beata no ano seguinte no dia 18 de Abril. Faustina se tornou Beata pelas mãos do Papa João Paulo II,
        homem batizado com o nome de Karol Wojtyla. Vale lembrar que Faustina também era Polonesa, assim como o
        Papa que a beatificou.\nJá em Janeiro de 2000 mais um milagre foi concedido e aceito pela intercessão da
        Beata Faustina, fazendo com que ela se torne Santa Faustina no dia 30 de Abril de 2000, também pelas mãos
        do Papa João Paulo II. Na canonização da beata, Papa João Paulo II também definiu que a Festa da
        Misericórdia seria comemorada no segundo domingo da Páscoa. Tornando a história ainda mais bonita, o
        Papa João Paulo II foi canonizado no dia 27 de Abril de 2014, um domingo da Divina Misericórdia.</string>
    <string name="texto_devocao4"><i>\"Ajuda-me, Senhor, que minhas mãos possam ser misericordiosas e cheias
        de boas ações. Eu só sei fazer o bem ao próximo, tomar sobre mim o trabalho mais pesado. Ajuda-me,
        que o meu pé possa ser misericordioso, para que eu possa correr para ajudar o meu próximo, vencendo
        a própria fadiga e cansaço. Meu verdadeiro descanso está a serviço dos outros. Ajuda-me, Senhor, que
        meu coração seja misericordioso, para que eu possa sentir em mim todos os sofrimentos dos outros&#8230;\"</i></string>
    <string name="texto_mej1">O Movimento Eucarístico Jovem é uma ramificação do Apostolado da Oração e existe
        no mundo inteiro. A partir dessa ramificação, o MEJ possui como sua espiritualidade principal
        o Sagrado Coração de Jesus. Inspirado pelo amor que brota desse Sagrado Coração, os membros do MEJ
        exercem serviços de apostolado, evangelização e oração pelo mundo inteiro, estando presente em mais
        de 50 países.</string>
    <string name="texto_mej2">O MEJ, antes conhecido como Cruzada Eucarística surgiu em 1915 no Colégio Tívoli
        em Bordéus na França, tinha como missão fazer com que crianças e adolescentes se unissem parar orar
        pelo mundo e todas as suas dificuldades. Nessa época o mundo era assolado pela primeira guerra mundial
        e por isso era necessário a intercessão de todos para que se atingisse a paz. Nesse contexto, o MEJ
        foi oficializado no mundo inteiro, inclusive no Brasil.</string>
    <string name="texto_mej3">Então em 1960, a Cruzada Eucarística peregrinou a Roma e se encontrou com o Papa
        João XXIII, que ao se referir ao grupo, o chamava de \"Movimento\" em vez de \"Cruzada\". A partir daí
        começa-se a utilizar o nome Movimento Eucarístico Jovem.</string>
    <string name="texto_mej4">O MEJ e o Sagrado Coração de Jesus foram a inspiração para o desenvolvimento
        desse aplicativo. Conheça o Movimento e a devoção! \nPromessa no. 11: <i>Aqueles que propagarem esta
        devoção terão seus nome escritos para sempre no Meu Sagrado Coração.</i></string>
    <string name="texto_obras1">Conforme o Catecismo da Igreja Católica n. 2447:\nAs obras de misericórdia são as
        ações caridosas pelas quais vamos em ajuda do nosso próximo, nas suas necessidades corporais e espirituais.
        Instruir, aconselhar, consolar, confortar, são obras de misericórdia espirituais, como perdoar e suportar
        com paciência. As obras de misericórdia corporais consistem nomeadamente em dar de comer a quem tem fome,
        albergar quem não tem teto, vestir os nus, visitar os doentes e os presos, sepultar os mortos. Entre estes
        gestos, a esmola dada aos pobres é um dos principais testemunhos da caridade fraterna e também uma prática
        de justiça que agrada a Deus.\nAs obras de misericórdia são divididas entre Corporais e Espirituais.</string>
    <string name="lista_obras_corporais"><b>Obras de misericórdia corporais:</b>\n1. Dar de comer a quem tem fome
        \n2. Dar de beber a quem tem sede\n3. Dar pousada aos peregrinos\n4. Vestir os nus\n5. Visitar os enfermos
        \n6. Visitar os presos\n7. Enterrar os mortos</string>
    <string name="lista_obras_espirituais"><b>Obras de misericórdia espirituais:</b>\n1. Ensinar os ignorantes
        \n2. Dar bom conselho\n3. Corrigir os que erram\n4. Perdoar as injúrias\n5. Consolar os tristes
        \n6. Sofrer com paciência as fraquezas do nosso próximo\n7. Rezar a Deus por vivos e defundos</string>
    <string name="texto_obras2">O exercício das Obras de misericórdia comunica graças a quem as exerce. No evangelho
        de S. Lucas Jesus diz: \'Dai, e ser-vos-á dado\'. Por isso, com as Obras de misericórdia fazemos a vontade de
        Deus, damos algo que é nosso aos outros e o Senhor promete que nos dará também a nós aquilo de que necessitamos.
        \nPor outro lado, um modo de ir apagando a pena que fica na alma pelos nossos pecados já perdoados é mediante as
        boas obras. Boas obras são, obviamente as Obras de misericórdia. \"Bem-aventurados os misericordiosos, porque eles
        alcançarão misericórdia\" (Mt 5, 7), é uma das Bem-Aventuranças. As Obras de misericórdia também nos vão tornando
        mais parecidos com Jesus, nosso modelo, que nos ensinou como deve ser a nossa atitude para com os outros. No
        evangelho de S. Mateus encontramos as seguintes palavras de Cristo: <i>\"Não entesoureis tesouros na terra, onde a
        traça os corrói, e onde os ladrões os roubam, mas amontoai tesouros no céu, onde a traça os não corrói, onde os
        ladrões não os roubam. Porque onde estiver o vosso tesouro, aí estará também o vosso coração\"</i>. Seguindo este
        ensinamento do Senhor trocamos os bens temporais pelos eternos, que são os que valem de verdade.</string>
    <string name="titulo_novena">Novena à Divina Misericórdia</string>
    <string name="texto_begin1"> \"Novena à Divina Misericórdia que Jesus me mandou escrever e rezar antes da Festa da
         Misericórdia Começa na sexta-feira santa.\" \nDesejo que, durante estes nove dias, conduzas as almas à fonte
        da Minha misericórdia, a fim de que recebam força, alívio e todas as graças de que necessitam nas dificuldades
        da vida e, especialmente na hora da morte. Cada dia conduzirás ao Meu Coração um grupo diferente de almas e as
        mergulharás nesse oceano da Minha misericórdia. Eu conduzirei todas essas almas à Casa de Meu Pai. Procederás
        assim nesta vida e na futura. Por Minha parte, nada negarei àquelas almas que tu conduzirás à fonte da Minha
        misericórdia. Cada dia pedirás a Meu Pai, pela Minha amarga Paixão, graças para essas almas.</string>
    <string name="texto_begin2">\nNovena extraída do site\nwww.jesus-misericordioso.com\npertencente à Congregação das Irmãs
        de Jesus Misericordioso. Conheça a obra!</string>
    <string name="titulo_jesus">[Palavras de Jesus]</string>
    <string name="titulo_faustina">[Oração de Santa Faustina]</string>
    <string name="primeiro_dia_jesus"><i>Hoje, traze-Me a humanidade inteira, especialmente todos os pecadores e mergulha-os no oceano da
        Minha misericórdia. Com isso Me consolarás na amarga tristeza em que Me afunda a perda das almas.</i></string>
    <string name="primeiro_dia_faustina">Misericordiosíssimo Jesus, de quem é próprio ter compaixão de nós e nos perdoar, não olheis os
        nossos pecados, mas a confiança que depositamos em Vossa infinita bondade. Acolhei-nos na mansão do vosso compassivo Coração e nunca nos
        deixeis sair dele. Nós vo-lo pedimos pelo amor que Vos une ao Pai e ao Espírito Santo.\n
        Eterno Pai, olhai com misericórdia para toda humanidade, encerrada no Coração compassivo de Jesus, mas especialmente
        para os pobres pecadores. Pela Sua dolorosa Paixão, mostrai-nos a Vossa misericórdia, para que glorifiquemos a
        onipotência da Vossa misericórdia, por toda a eternidade. Amém.</string>
</resources>