<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="5dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/titulo_dia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/titulo_primeiro_dia"
            android:textStyle="bold"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/titulo_jesus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titulo_dia"
            android:gravity="center"
            android:paddingTop="5dp"
            android:text="@string/titulo_jesus"
            android:textIsSelectable="true"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/primeiro_dia_jesus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titulo_jesus"
            android:text="@string/primeiro_dia_jesus"
            android:textIsSelectable="true"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/titulo_faustina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/primeiro_dia_jesus"
            android:gravity="center"
            android:paddingTop="5dp"
            android:text="@string/titulo_faustina"
            android:textIsSelectable="true"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/primeiro_dia_faustina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titulo_faustina"
            android:paddingBottom="5dp"
            android:text="@string/primeiro_dia_faustina"
            android:textIsSelectable="true"
            android:textSize="16sp" />

        <Button
            android:id="@+id/botao_terco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/primeiro_dia_faustina"
            android:layout_centerHorizontal="true"
            android:text="@string/terco_da_misericordia" />

    </RelativeLayout>
</ScrollView>