<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="5dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/texto_obras1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/texto_obras1"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/lista_obras_corporais"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/texto_obras1"
            android:paddingTop="5dp"
            android:text="@string/lista_obras_corporais"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/lista_obras_espirituais"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lista_obras_corporais"
            android:paddingTop="5dp"
            android:text="@string/lista_obras_espirituais"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/texto_obras2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lista_obras_espirituais"
            android:paddingTop="5dp"
            android:text="@string/texto_obras2"
            android:textSize="15sp" />

    </RelativeLayout>
</ScrollView>