<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="5dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/txt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/texto_mej1"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/imgSagradoCoracao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt1"
            android:src="@drawable/sagradocoracao"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/txt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgSagradoCoracao"
            android:text="@string/texto_mej2"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txt3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt2"
            android:text="@string/texto_mej3"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/imgMej"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt3"
            android:src="@drawable/coracaomej"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/txt4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgMej"
            android:text="@string/texto_mej4"
            android:textSize="15sp" />

    </RelativeLayout>
</ScrollView>