<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="5dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/titulo_novena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/titulo_novena"
            android:textStyle="bold"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/texto_begin1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titulo_novena"
            android:gravity="center"
            android:text="@string/texto_begin1"
            android:textStyle="italic"
            android:textIsSelectable="true"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/texto_begin2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/texto_begin1"
            android:gravity="center"
            android:text="@string/texto_begin2"
            android:textSize="14sp"
            android:autoLink="web" />

    </RelativeLayout>
</ScrollView>